--- a/app/src/main/res/menu/menu_groups.xml
+++ b/app/src/main/res/menu/menu_groups.xml
@@ -6,4 +6,9 @@
         android:title="@string/action_settings"
         android:orderInCategory="100"
         app:showAsAction="never" />
+
+    <item android:id="@+id/logout"
+        android:title="@string/Logout"
+        android:orderInCategory="100"
+        app:showAsAction="never" />
 </menu>
