--- a/app/src/main/res/layout/custom_row.xml
+++ b/app/src/main/res/layout/custom_row.xml
@@ -4,16 +4,27 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="77dp"
-        android:layout_height="77dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:id="@+id/contactImage"
-        android:layout_margin="5dp" />
+        android:layout_margin="2dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Large Text"
         android:id="@+id/contactText"
-        android:layout_margin="5dp" />
+        android:layout_margin="2dp"
+        android:allowUndo="false"
+        android:textColor="#030303" />
+   <!-- <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="X"
+        android:id="@+id/contactRemove"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_margin="2dp" />-->
 </LinearLayout>
