--- a/app/src/main/res/layout/content_groups.xml
+++ b/app/src/main/res/layout/content_groups.xml
@@ -13,18 +13,18 @@
     tools:showIn="@layout/activity_groups">
 
     <ImageView
-        android:id="@+id/profile_pic"
+        android:id="@+id/group_pic"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:contentDescription="desc"
         android:paddingLeft="10dp"
         android:paddingRight="10dp" />
     <TextView
-        android:id="@+id/member_name"
+        android:id="@+id/group_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_toRightOf="@+id/profile_pic"
+        android:layout_toRightOf="@+id/group_pic"
         android:paddingBottom="10dp"
         android:text="txt"
         android:textSize="20sp" />
@@ -33,17 +33,17 @@
         android:id="@+id/status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/member_name"
-        android:layout_below="@+id/member_name"
+        android:layout_alignLeft="@+id/group_name"
+        android:layout_below="@+id/group_name"
         android:text="txt"
         android:textSize="16sp" />
 
     <TextView
-        android:id="@+id/contact_type"
+        android:id="@+id/group_size"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/member_name"
-        android:layout_alignBottom="@+id/member_name"
+        android:layout_alignBaseline="@+id/group_name"
+        android:layout_alignBottom="@+id/group_name"
         android:layout_alignParentRight="true"
         android:text="txt"
         android:textSize="16sp" />
