--- a/app/src/main/res/layout/content_groups.xml
+++ b/app/src/main/res/layout/content_groups.xml
@@ -17,7 +17,9 @@
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:paddingLeft="10dp"
-        android:paddingRight="10dp" android:icon="@android:drawable/ic_menu_save"/>
+        android:paddingRight="10dp"
+        android:src="@android:drawable/ic_menu_report_image"/>
+
     <TextView
         android:id="@+id/group_name"
         android:layout_width="wrap_content"
